fixed alignment

--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,7 @@
     grid-template-columns: 50px 50px 1fr 50px;
     background-color: aqua;
     overflow-y: scroll;
+    align-content: flex-start;
 }
 .text {
     display: flex;
